# 24HS-Advanced-Topics-in-AI

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/config/: app.py  enums.py
app/services/: agent_answering_service.py  answering_service.py  crowd_service.py  disambiguation_service.py  embeddings_service.py  image_finder.py  knowledge_answering_service.py  llm_service.py  question_classifier.py  recommendation_service.py  sparql_graph.py
app/services/extractors/: main.py  movie_extraction.py  relationship_extraction.py
submissions/eval2/: eval2_diagram.html
submissions/eval3/: eval3_diagram.html
submissions/final/: final_diagram.html
utils/: download-dataset.py  nltk_downloads.py
utils/test_scripts/: bigram_based_embedding_extracition.ipynb  crowd_data_test.ipynb  dataset_intro.ipynb  dataset_manip.ipynb  embeddings.ipynb  poc_ner.ipynb  processed_crowd.csv  recommender_systems.ipynb  sparql.ipynb  sparql_retriaval.ipynb  test_custom_extraction.ipynb  test_e2e.ipynb  test_extract_relation_from_query.ipynb  test_personenImageFinder2.ipynb  test_question_classification.ipynb  test_recommender_systems.ipynb
utils/test_scripts/custom_ner_on_q/: .gitignore  0.26.0  custom_model_test.ipynb  data_for_ner.pkl  old_data.pkl  old_train_bert.ipynb  train_bert_from_ner.ipynb
utils/test_scripts/question_classifier/: 4.2.0  question_classifier_model.joblib  question_classifier_model.pth  train.ipynb  train_nn.ipynb
utils/test_scripts/spacy_rule_based_recognition/: train_model.ipynb
utils/useful_dataset/: lbl2rel.json  movies.json
(+11 files in other folders)
