[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
speakeasypy = { file = "./libs/speakeasypy/dist/speakeasypy-1.0.0-py3-none-any.whl" }
uvicorn = "^0.30.6"
fastapi = { extras = ["standard"], version = "^0.115.0" }
pydantic-settings = "^2.5.2"
tqdm = "^4.66.5"
rich = "^13.9.1"
requests = "^2.32.3"
rdflib = "^7.0.0"
torch = { version = "*", source = "pytorch" }
torchvision = { version = "*", source = "pytorch" }
torchaudio = { version = "*", source = "pytorch" }
transformers = { extras = ["torch"], version = "*" }
datasets = "*"
accelerate = ">=0.26.0"
numpy = "<2.0.0"
scikit-learn = "^1.5.2"
python-levenshtein = "^0.26.0"
fuzzywuzzy = "^0.18.0"
spacy = ">=3.7.0,<3.8.0"  # scikit-surprise requires numpy < 2.0.0, only spacy < 3.8.0 is compatible with numpy < 2.0.0
sentence-transformers = "^3.2.0"
scikit-surprise = "^1.1.4"
nltk = "^3.9.1"
jupyter = "^1.1.1"
ollama = "^0.4.4"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
